2017-12-18  Joseph Myers  <joseph@codesourcery.com>

	[BZ #22446]
	* nscd/connections.c (handle_request) [SO_PEERCRED]: Use separate
	buffers for readlink input and output.

2017-12-15  Steve Ellcey  <sellcey@cavium.com>

	* nscd/dbg_log.c (dbg_log): Increase msg buffer size.

2017-11-22  Joseph Myers  <joseph@codesourcery.com>

	[BZ #22463]
	* resolv/res_debug.c: Include <libc-diag.h>.
	(p_secstodate): Assert time_t at least as wide as u_long.  On
	overflow, use integer seconds since the epoch as output, or use
	"<overflow>" as output and set errno to EOVERFLOW if integer
	seconds since the epoch would be 14 or more characters.
	(p_secstodate) [__GNUC_PREREQ (7, 0)]: Disable -Wformat-overflow=
	for sprintf call.
	* resolv/tst-p_secstodate.c: New file.
	* resolv/Makefile (tests): Add tst-p_secstodate.
	($(objpfx)tst-p_secstodate): Depend on $(objpfx)libresolv.so.

2017-11-12  Paul Eggert  <eggert@cs.ucla.edu>

	timezone: pacify GCC -Wstringop-truncation
	Problem reported by Martin Sebor in:
	https://sourceware.org/ml/libc-alpha/2017-11/msg00336.html
	* timezone/zic.c (writezone): Use memcpy, not strncpy.

2017-11-15  Martin Sebor  <msebor@redhat.com>

	* misc/sys/cdefs.h (__attribute_nonstring__): New macro.
	* sysdeps/gnu/bits/utmp.h (struct utmp): Use it.
	* sysdeps/unix/sysv/linux/s390/bits/utmp.h (struct utmp): Same.

2017-11-22  Joseph Myers  <joseph@codesourcery.com>

	[BZ #22447]
	* sysdeps/unix/getlogin_r.c (__getlogin_r): Use __strnlen not
	strlen to compute length of ut_user and set trailing NUL byte of
	result explicitly.

2018-10-19  Ilya Yu. Malakhov  <malakhov@mcst.ru>

	[BZ #23562]
	* sysdeps/unix/sysv/linux/bits/types/siginfo_t.h
	(struct siginfo_t): Use correct type for si_band.

2018-09-28  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #23579]
	* misc/tst-preadvwritev2-common.c (do_test_with_invalid_fd,
	do_test_with_invalid_iov): New tests.
	* misc/tst-preadvwritev2.c, misc/tst-preadvwritev64v2.c (do_test):